--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+streamlit
 nltk
 spacy
 scikit-learn
+pandas
+matplotlib
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
